--- a/style_main.css
+++ b/style_main.css
@@ -107,11 +107,52 @@ body {
     animation-delay: 1s;
 }
 
+.Bio {
+    width: 100%;
+    padding: 78px 0px;
+}
+
+.main {
+    width: 1130px;
+    max-width: 95%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
 .home-img img {
     max-width: 400px;
     margin-right: -6px;
     margin-top: 60px;
     border-radius: 200px;
+}
+
+.main img {
+    height: auto;
+    width: 420px;
+    margin-top: 0px;
+    margin-bottom: 390px;
+    margin-left: -150px;
+}
+
+.Bio-text {
+    width: 550px;
+}
+
+.Bio-text h1{
+    color:#0ef;
+    font-size: 80px;
+    text-transform: capitalize;
+    margin-bottom: 20px;
+}
+
+.Bio-text p {
+    text-align: justify;
+    letter-spacing: 1px;
+    line-height: 28px;
+    font-size: 18px;
+    margin-bottom: 45px;
 }
 
 .social-media a {
@@ -153,6 +194,22 @@ body {
     opacity: 0;
     animation: slideTop 1s ease forwards;
     animation-delay: 1.6s;
+}
+
+.firstbio {
+    margin-bottom: 20px;
+}
+
+.secondbio {
+    margin-bottom: 20px;
+}
+
+.zero {
+    margin-bottom: 20px;
+}
+
+.thirdbio {
+    margin-bottom: 20px;
 }
 
 
