--- a/style_main.css
+++ b/style_main.css
@@ -155,6 +155,27 @@ body {
     margin-bottom: 45px;
 }
 
+.back-button {
+    display: inline-block;
+    padding: 12px 28px;
+    background: #0ef;
+    border-radius: 40px;
+    box-shadow: 0 0 10px #0ef;
+    text-decoration: none;
+    font-size: 16px;
+    color: #1f242d;
+    letter-spacing: 1px;
+    font-weight: 600;
+    margin-top: 30px;
+    margin-left: 110px;
+    margin-bottom: -120px;
+}
+
+.back-button:hover {
+    background-color: #fff;
+}
+
+
 .social-media a {
     display: inline-flex;
     justify-content: center;
