--- a/style_main.css
+++ b/style_main.css
@@ -35,6 +35,27 @@ body {
     animation: slideRight 1s ease forwards;
 }
 
+.port-header {
+    position: fixed;
+    margin-left: 520px;
+    margin-top: 20px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 10%;
+    background: transparent;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+    transition: top 0.3s; /* Add smooth transition */
+}
+
+.port-header.hide-header {
+    top: -100px; /* Move header out of view */
+}
+
+
 /*.navbar {
     margin-left: auto;
 }*/
@@ -107,9 +128,80 @@ body {
     animation-delay: 1s;
 }
 
+.portfolio {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 70px 10% 0;
+}
+
+.portfolio-content p {
+    text-align: justify;
+    letter-spacing: 1px;
+    line-height: 28px;
+    font-size: 18px;
+    margin-bottom: 45px;
+}
+
+.portfolio-content {
+    max-width: 570px;
+    margin-top: 95px;
+}
+
+.portfolio-content h1 {
+    font-size: 50px;
+    font-weight: 600px;
+    margin-bottom: 30px;
+}
+
+.portfolio-content h2 {
+    font-size: 21px;
+    font-weight: 600px;
+    margin-bottom: 30px;
+}
+
+.slide {
+    display: inline-block;
+    padding: 12px 28px;
+    background: #0ef;
+    border-radius: 40px;
+    box-shadow: 0 0 10px #0ef;
+    text-decoration: none;
+    font-size: 16px;
+    color: #1f242d;
+    letter-spacing: 1px;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 50px;
+    margin-left: 140px;
+}
+
+.youtube-port{
+    margin-bottom: 400px;
+}
+
 .Bio {
     width: 100%;
     padding: 78px 0px;
+}
+
+.prof {
+    display: inline-block;
+    padding: 12px 28px;
+    background: #0ef;
+    border-radius: 40px;
+    box-shadow: 0 0 10px #0ef;
+    text-decoration: none;
+    font-size: 16px;
+    color: #1f242d;
+    letter-spacing: 1px;
+    font-weight: 600;
+    margin-top: -8px;
+    margin-bottom: 50px;
+    margin-left: 182px;
 }
 
 .main {
